当只有一个tab项时有问题，修改bug

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript">
 	var m=new moreTab({
           id:tablist,
-          itemList:[{'name':'财经','hLink':'www.baidu.com'},{'name':'体育','hLink':'http://news.qq.com/'},{'name':'娱乐','hLink':'www.baidu.com'},{'name':'房产','hLink':'www.baidu.com'},{'name':'科技','hLink':'www.baidu.com'},{'name':'汽车','hLink':'www.baidu.com'},{'name':'数码','hLink':'www.baidu.com'},{'name':'时尚','hLink':'www.baidu.com'},{'name':'时尚','hLink':'https://www.baidu.com/'},{'name':'教育','hLink':'https://www.baidu.com/'}],
+          itemList:[{'name':'财经','hLink':'www.baidu.com'}],
           tabItemLen:7
         });
 	</script>
